# pytest-template

./: pyproject.toml  readme.md
my_math/: mul.py
tests/: test_mul.py  test_sum.py
